--- a/app/package.json
+++ b/app/package.json
@@ -6,7 +6,8 @@
   },
   "dependencies": {
     "babel-runtime": "^6.20.0",
-    "meteor-node-stubs": "~0.2.4",
+    "jquery": "<3.0.0",
+    "meteor-node-stubs": "^0.2.6",
     "semantic-ui": "^2.2.9"
   },
   "devDependencies": {
