--- a/app/package.json
+++ b/app/package.json
@@ -7,6 +7,8 @@
   "dependencies": {
     "babel-runtime": "^6.20.0",
     "bcrypt": "^1.0.2",
+    "casper": "^0.1.1",
+    "casperjs": "^1.1.3",
     "jquery": "<3.0.0",
     "meteor-node-stubs": "^0.2.6",
     "semantic-ui": "^2.2.9"
