--- a/app/package.json
+++ b/app/package.json
@@ -5,10 +5,12 @@
     "start": "meteor run"
   },
   "dependencies": {
-    "babel-runtime": "^6.20.0",
+    "autoprefixer": "^6.7.7",
+    "babel-runtime": "^6.23.0",
     "bcrypt": "^1.0.2",
     "casper": "^0.1.1",
     "casperjs": "^1.1.3",
+    "faker": "^4.1.0",
     "jquery": "<3.0.0",
     "meteor-node-stubs": "^0.2.6",
     "semantic-ui": "^2.2.9"
