--- a/app/package.json
+++ b/app/package.json
@@ -11,6 +11,8 @@
     "casper": "^0.1.1",
     "casperjs": "^1.1.3",
     "faker": "^4.1.0",
+    "google-auth-library": "^0.10.0",
+    "googleapis": "^19.0.0",
     "jquery": "<3.0.0",
     "meteor-node-stubs": "^0.2.6",
     "semantic-ui": "^2.2.9"
