--- a/app/package.json
+++ b/app/package.json
@@ -15,6 +15,7 @@
     "googleapis": "^19.0.0",
     "jquery": "<3.0.0",
     "meteor-node-stubs": "^0.2.6",
+    "nodemailer": "^4.0.1",
     "semantic-ui": "^2.2.9"
   },
   "devDependencies": {
